# kiss-graphics

./: CMakeLists.txt
backend/: CMakeLists.txt
backend/pipe/: CMakeLists.txt  pipe_display.cpp  pipe_display.hpp
backend/sdl/: CMakeLists.txt  sdl_display.cpp  sdl_display.hpp
backend/socket/: CMakeLists.txt  socket_display.cpp  socket_display.hpp
include/kiss-graphics/: context.hpp  display.hpp  kiss-graphics.h  kiss-graphics.hpp
src/: kiss-graphics.cpp
test/: CMakeLists.txt  polygon.cpp
