option(sdl "Enable SDL backend" ON)

if(sdl)
  set(BACKEND_SRCS ${BACKEND_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/sdl_display.cpp PARENT_SCOPE)
  set(BACKEND_INCLUDES ${BACKEND_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/sdl_display.hpp PARENT_SCOPE)
  set(BACKEND_DEPS ${BACKEND_DEPS} SDL2 PARENT_SCOPE)
endif()